# designsage

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/routers/: webrtc.py
backend/routes/: webrtc.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/: constants.ts
frontend/src/app/: hooks.ts  layout.tsx  page.tsx
frontend/src/app-components/: canvas.tsx  types.ts
frontend/src/app-components/canvas/: canvas.tsx
frontend/src/app-components/canvas/edge-selection/: edge-selection.tsx
frontend/src/app-components/canvas/edges/: backward-edge.tsx  bi-directional-edge.tsx  forward-edge.tsx  label-handler.tsx
frontend/src/app-components/canvas/resizable-nodes/: circle.tsx  cylinder.tsx  square.tsx
frontend/src/app-components/communication-toolbar/: communication-toolbar.tsx
frontend/src/app-components/navbar/: navbar.tsx
frontend/src/app-components/resizable-nodes/: circle.tsx  cylinder.tsx  square.tsx
frontend/src/app-components/shapes-bar/: shapesBar.tsx
frontend/src/app-components/sidebar/: sidebar.tsx
frontend/src/app-components/utils/: mermaid-utility.ts
frontend/src/app/canvas/: page.tsx
frontend/src/app/hello/: page.tsx
frontend/src/app/practise/[questionId]/: page.tsx
frontend/src/app/questions/: page.tsx
frontend/src/components/ui/: textarea.tsx
frontend/src/lib/mocks/: mock-questions.json
frontend/src/store/: store.ts
frontend/src/store/canvas/: nodeDropReducer.ts
