[project]
name = "design-sage-backend"
version = "0.1.0"
description = "Backend for the Design Sage application"
authors = [
    { name = "Balasubramanyam Karri", email = "karri.balu2339@gmail.com" },
]
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "openai>=1.67.0",
    "requests>=2.32.3",
    "ruff>=0.11.0",
    "uvicorn>=0.34.0",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
